syntax = "proto3";

package org.wiremock.demo.grpc;

option java_multiple_files = true;

message ChargeRequest {
  string customerId = 1;
  string currency = 2;
  int64 amount = 3;
}

message ChargeResponse {
  string chargeId = 1;
  string status = 2;
}

service PaymentService {
  rpc createCharge(ChargeRequest) returns (ChargeResponse);
}